# hutao-installer

./: README.md  package.json  pnpm-lock.yaml  rsbuild.config.ts
.github/workflows/: build.yml
src/: App.vue  api.ts  index.css  index.ts  tauri.ts  types.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: api.rs  fs.rs  installer.rs  main.rs
src-tauri/src/cli/: arg.rs  mod.rs
src-tauri/src/module/: mod.rs  singleton.rs  wv2.rs
src-tauri/src/utils/: cert.rs  device.rs  dir.rs  font.rs  hash.rs  mod.rs  package_manager.rs  process.rs  uac.rs  windows_version.rs
src/components/: LocaleSwitch.vue
src/i18n/: chs.json  cht.json  en.json  index.ts  ja.json  jp.json
