[package]
name = "hutao-installer"
version = "0.1.0"
description = "Refreshed Snap Hutao Installer"
authors = ["DGP-Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
cppwinrt = "0.2.1"
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Management",
    "Management_Deployment",
    "ApplicationModel",
    "Foundation_Collections",
    "Win32_Security_Cryptography"
] }
tokio-util = { version = "0.7", features = ["io-util"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "process",
    "macros",
    "net",
] }
clap = { version = "4.5.24", features = ["derive"] }
nt_version = "0.1"
lazy_static = "1.5"
num_cpus = "1.16.0"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "native-tls",
    "native-tls-alpn",
    "charset",
    "gzip",
    "stream",
] }
rfd = { version = "0.15", default-features = false, features = [
    "tokio",
    "common-controls-v6",
] }
fmmap = { version = "0.3", features = ["tokio-async"] }
indicatif = { version = "0.17.9", features = ["tokio"] }
dark-light = "2.0.0"
pin-project = "1.1.7"
chksum-sha2-256 = { version = "0.1", features = ["async-runtime-tokio"] }
mslnk = "=0.1"
webbrowser = "0.8"
winreg = "0.55.0"
futures = "0.3.31"
async-compression = { version = "0.4", features = ["tokio"] }
async-walkdir = "2.0"
uuid = { version = "1.12.0", features = ["v4"] }

[[bin]]
name = "hutao-installer"
path = "src/main.rs"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
