[package]
name = "hutao-installer"
version = "2.1.2"
description = "Refreshed Snap Hutao Installer"
authors = ["DGP-Studio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-utils = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
cppwinrt = "0.2.1"
windows = { version = "0.60", features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Management",
    "Management_Deployment",
    "ApplicationModel",
    "Foundation_Collections",
    "Win32_Security_Cryptography",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp"
] }
windows-future = "0.1"
tokio-util = { version = "0.7", features = ["io-util"] }
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "io-util",
    "process",
    "macros",
    "net",
] }
clap = { version = "4.5", features = ["derive"] }
nt_version = "0.1"
lazy_static = "1.5"
num_cpus = "1.16.0"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "native-tls",
    "native-tls-alpn",
    "charset",
    "gzip",
    "stream",
] }
rfd = { version = "0.15", default-features = false, features = [
    "tokio",
    "common-controls-v6",
] }
dark-light = "2.0.0"
chksum-sha2-256 = { version = "0.1", features = ["async-runtime-tokio"] }
webbrowser = "1"
winreg = "0.55.0"
futures = "0.3"
uuid = { version = "1.15", features = ["v4"] }
whoami = "1"
chksum-md5 = { version = "0.1", features = ["async-runtime-tokio"] }
winsafe = { version = "0.0.23", features = ["shell"] }
semver = "1"
tauri-plugin-single-instance = "2"

[[bin]]
name = "hutao-installer"
path = "src/main.rs"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
